Added patch route for updating Meso with users
